
http://www.packetfence.org/support/community.html

This is a list of noteworthy changes across releases. 
For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.


--------------------------------------------------------------------------------
Version <release> released on <releaseDate>

Enhancements
 * Cleanup of the MySQL optimization section of the Admin Guide

Bug fixes
 * Fixed Nortel switches problems on some models / firmwares

--------------------------------------------------------------------------------
Version 2.2.0 released on 2011-05-03

New Hardware Support
- Motorola RF Switches (Wireless Controllers)
- 3Com Switches 4200G, E4800G and E5500G now supports MAC Authentication and 
  802.1X
- Dlink DGS 3100 Switches

New features
- Captive Portal network access detection is more accurate and way faster
  (javascript-based)
- Easier integration and configuration of FreeRADIUS 2.x using our new
  packetfence-freeradius2 RPM
- Apache configuration is automatically adjusted on startup based on system 
  resources to avoid performance degradation on heavy workloads (#1204)
- New reports: Nodes per SSID (#1126) and Connection-Type (#1125)
- User-Agent violation support completely re-written. It is now easier than 
  ever to block devices or old browsers from your network. (#769, #1192)
- Administrators can now modify and preview remediation pages from the Web Admin
- VoIP autodetection in Wired 802.1X and Wired MAC Authentication can now use 
  CDP / LLDP if available (#1175)
- Kerberos Authentication on the Captive Portal (Thanks to Brad Lhotsky from 
  NIH)

Enhancements
- Moved several configuration files from conf/templates/ into conf/ (#1166)
- SSL certificate configuration for httpd is now in a separate file that is not
  overwritten by packages making it easier to maintain (#1207)
- 3Com Super Stack 4500 now uses SNMP for MAC authorization (port-security)